# ai_research_intelligence

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  download_qwen.py  pyproject.toml  requirements.txt
ai-research-rag/: .env.example  .gitignore  requirements.txt
ai-research-rag/api/: __init__.py  main.py  middleware.py  schemas.py
ai-research-rag/docs/: architecture.md
ai-research-rag/evaluation/: __init__.py  metrics.py  simple_eval.py  testset.py
ai-research-rag/frontend/: app.js  style.css
ai-research-rag/ingestion/: __init__.py  chunker.py  embedder.py  load_arxiv.py
ai-research-rag/pipeline/: __init__.py  generator.py  models.py  prompt.py  rag_pipeline.py  retriever.py
ai-research-rag/scripts/: build_index.sh  evaluate.sh  ingest.sh
ai-research-rag/tests/: test_api.py  test_topic_mapper.py
api/: main.py  schemas.py
app/: streamlit_app.py
data_prep/: build_ai_dataset.py  build_recent_ai_snapshot.py  review_dataset_stats.py
docs/: architecture.md
evaluation/: smoke_eval.py
frontend/: index.html
ingestion/: build_documents.py  build_faiss_index.py  embedder.py  embedder_optimized.py  filter_papers.py  run.py  topic_mapper.py
pipeline/: generator.py  models.py  prompt.py  rag_pipeline.py  reranker.py  retriever_faiss.py  test_query.py
scripts/: debug_query.py  download_models.py  test_api.py
tests/: test_api_local.py  test_document_builder.py
