[project]
name = "ai-research-rag"
version = "0.1.0"
description = "RAG-based AI Research Intelligence Assistant for strategic insights"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Research Intelligence Team"},
]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
